--- a/Codes/school_website/Controller/frontend/Templates/admission.html
+++ b/Codes/school_website/Controller/frontend/Templates/admission.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Admission - HOLY CROSS PUBLIC SCHOOL</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../Styles/style.css">
 </head>
 <body>
     <header>
@@ -20,7 +20,6 @@
                 <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
-        <p>Admission Information</p>
     </header>
 
     <main class="admission">
@@ -71,7 +70,7 @@
         <p>&copy; 2025 HOLY CROSS PUBLIC SCHOOL. All rights reserved.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="../Script/script.js"></script>
     <script>
         const form = document.getElementById("admissionForm");
         const status = document.getElementById("formStatus");
