--- a/Codes/school_website/Controller/frontend/Templates/index.html
+++ b/Codes/school_website/Controller/frontend/Templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HOLY CROSS PUBLIC SCHOOL</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../Styles/style.css">
 </head>
 <body>
     <header>
@@ -20,14 +20,13 @@
                 <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
-        <p>Home</p>
     </header>
 
     <main>
         <section class="welcome">
             <h2>Welcome to Holy Cross Public School</h2>
             <p>At Holy Cross Public School, we believe in nurturing excellence through education, discipline, and creativity. Our faculty and facilities provide a supportive environment for holistic student development.</p>
-            <img src="assets/images/school-building.jpg" alt="School Building" class="home-img">
+            <img src="../Resources/front image.jpg" alt="School Building" class="home-img">
         </section>
     </main>
 
