--- a/Codes/school_website/Controller/frontend/Templates/academics.html
+++ b/Codes/school_website/Controller/frontend/Templates/academics.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Academics - HOLY CROSS PUBLIC SCHOOL</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../Styles/style.css">
 </head>
 <body>
     <header>
@@ -20,7 +20,6 @@
                 <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
-        <p>Academics</p>
     </header>
 
     <main class="academics">
