--- a/Codes/school_website/Controller/frontend/Templates/login.html
+++ b/Codes/school_website/Controller/frontend/Templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login - HOLY CROSS PUBLIC SCHOOL</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../Styles/style.css">
 </head>
 <body>
     <header>
@@ -45,6 +45,6 @@
     <!-- input fields stay the same -->
     </form>
 
-    <script src="js/script.js"></script>
+    <script src="../Script/script.js"></script>
 </body>
 </html>
